@@ -1,3 +1,3 @@
 input {
-  max-width: 4rem;
+  max-width: 3rem;
 }
