@@ -2,7 +2,7 @@
      *ngIf="world"
      (click)="openModal()">
   <h3 class="card-title">{{world.name}} ({{world.level |format:true}})</h3>
-  <span class="p2">Prestige:
+  <span class="p2">Experience:
     <span class="monospace">{{world.prestige | format:true}}</span>
   </span>
   <ul class="list">
